--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -50,9 +50,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>932 272 445 103 0 0 1680 1027 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>267 210 937 512 0 0 1680 1027 </string>
+	<string>267 302 770 381 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 14 1682 1013 0 0 1680 1027 </string>
+	<string>0 -35 1674 1013 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -651,8 +651,16 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>E001553F-961A-4C8E-9D54-272EE4330408</string>
+	<key>NoSyncLastTipTime</key>
+	<real>511274198.80320197</real>
+	<key>NoSyncPermissionToShowTip</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>511094396.33143598</real>
+	<key>NoSyncTipsToNotShow</key>
+	<array>
+		<string>000</string>
+	</array>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -697,9 +705,11 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-03-13T12:38:47Z</date>
+	<date>2017-03-15T01:32:19Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
+	<key>SplitPaneDimmingAmount</key>
+	<real>0.10000000000000001</real>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
